--- a/module_input.html
+++ b/module_input.html
@@ -11,14 +11,23 @@
     <div id="form">
 	    <table summary="Form table">
 	      <tr>
-	        <td>Module Width</td><td><input id="mwidth" value="12"></td>
+	        <td>Module Width</td><td><input id="mwidth" value="24"></td>
         </tr>
         <tr>
-	        <td>Module Run</td><td><input id="mrun" value="24"></td>
+	        <td>Module Length</td><td><input id="mlength" value="12"></td>
         </tr>
         <tr>
 	        <td>Module Thickness</td><td><input id="mthickness" value="1"></td>
-	      </tr>
+        </tr>
+        <tr>
+	        <td>Module Name</td><td><input id="mname" value="Custom Solar Module"></td>
+        </tr>
+        <tr>
+	        <td>Panel Color</td><td><input id="mpcolor" value="blue"></td>
+        </tr>
+        <tr>
+          <td>Panel Border Color</td><td><input id="mbcolor" value="silver"></td>
+        </tr>
       </table>
       <a href="skp:generateModules@generate" class="button">Generate</a>
     </div>
